--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -571,7 +571,7 @@
                                  <li class="subMenu">
                                       <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li id="Installation" ><a id="installation-expand" class="child 2" href="#Installations">Installation</a>
+                                          <li id="INSTALL" ><a id="installation-expand" class="child 2" href="#Installation">Installation</a>
                                               <ul id="installation-ul">
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> Software Requirements</span></a></li>
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements">Hardware Requirements</span></a></li>
@@ -702,7 +702,7 @@
                                                     </ul>
                                                     </li>
 
-                                                      <li id="SecureFTP" style="margin-left:10px;"><a id="securefTP-expand" class="child 2" href="#SecureFTP"><span class="numbers"></span> <span style="margin-left:25px;">Secure FTP</span></a>
+                                                      <li id="Secure" style="margin-left:10px;"><a id="securefTP-expand" class="child 2" href="#SecureFTP"><span class="numbers"></span> <span style="margin-left:25px;">Secure FTP</span></a>
                                                       <ul id="securefTP-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#Connect"><span class="numbers"></span> <span style="margin-left:35px;">Connect</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#GetFile"><span class="numbers"></span> <span style="margin-left:35px;">Get File</span></a></li>
@@ -716,7 +716,7 @@
                                                       </ul>
                                                      </li>
 
-                                                    <li id="CSVActions" style="margin-left:10px;"><a id="cSVactions-expand"class="child 2" href="#CSVActions"><span class="numbers"></span> <span style="margin-left:25px;">CSV Actions</span></a>
+                                                    <li id="CSV" style="margin-left:10px;"><a id="cSVactions-expand"class="child 2" href="#CSVActions"><span class="numbers"></span> <span style="margin-left:25px;">CSV Actions</span></a>
                                                     <ul id="cSVactions-ul">
                                                     <li style="margin-left:20px;"><a class="child 2" href="#CSVHeader"><span class="numbers"></span> <span style="margin-left:35px;">CSV Header</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#CSVRow"><span class="numbers"></span> <span style="margin-left:35px;">CSV Row</span></a></li>
@@ -743,7 +743,7 @@
                                                    </ul>
                                                    </li>
 
-                                                      <li id="MailIntegration" style="margin-left:10px;"><a id="mailintegration-expand" class="child 2" href="#MailIntegration"><span class="numbers"></span> <span style="margin-left:15px;">Mail Integration</span></a>
+                                                      <li id="Mail" style="margin-left:10px;"><a id="mailintegration-expand" class="child 2" href="#MailIntegration"><span class="numbers"></span> <span style="margin-left:15px;">Mail Integration</span></a>
                                                          <ul id="mailintegration-ul">
                                                          <li style="margin-left:20px;"><a class="child 2" href="#Outlook"><span class="numbers"></span> <span style="margin-left:25px;">Outlook </span></a></li>
                                                          <li style="margin-left:20px;"><a class="child 2" href="#IMAP"><span class="numbers"></span> <span style="margin-left:25px;">IMAP - Read Mail</span></a></li>
@@ -754,7 +754,7 @@
                                                          </ul>
                                                       </li>
 
-                                                          <li  id="DatabaseActions" style="margin-left:10px;"><a id="databaseactions-expand" class="child 2" href="#DatabaseActions"><span class="numbers"></span> <span style="margin-left:15px;">Database Actions</span></a>
+                                                          <li  id="Database" style="margin-left:10px;"><a id="databaseactions-expand" class="child 2" href="#DatabaseActions"><span class="numbers"></span> <span style="margin-left:15px;">Database Actions</span></a>
                                                           <ul id="databaseactions-ul">
                                                           <li style="margin-left:20px;"><a class="child 2" href="#Connection"><span class="numbers"></span> <span style="margin-left:20px;">Connection</span></a></li>
                                                           <li style="margin-left:20px;"><a class="child 2" href="#ExecuteQuery"><span class="numbers"></span> <span style="margin-left:20px;">Execute Query</span></a></li>
