--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2350,7 +2350,7 @@
                             <div id="Registerwith"  class="page-section">
                               <h4 class="skyBlue"> Register with eManager console</h4>
 
-                              <p><span class="numbers">1.</span>  To Register into eManager-Console, go to<a target="_blank" href="https://www.techforce.ai.ai"> https://www.techforce.ai.ai  </a>choose your plan.</p>
+                              <p><span class="numbers">1.</span>  To Register into eManager-Console, go to<a target="_blank" href="https://www.techforce.ai"> https://www.techforce.ai  </a>choose your plan.</p>
                               <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Choose your Plan </strong></p>
                               <p><span class="numbers">2. </span>Fill your details and submit.</p>
