--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2350,20 +2350,17 @@
                             <div id="Registerwith"  class="page-section">
                               <h4 class="skyBlue"> Register with eManager console</h4>
 
-                              <p><span class="numbers">1.</span>  To Register into eManager-Console, go to<a target="_blank" href="https://www.techforce.ai"> https://www.techforce.ai  </a>choose your plan.</p>
-                              <img src="{{ '/assets/images/doc-img44.png' | relative_url }}"alt="image" style=" border: 1px solid green;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Choose your Plan </strong></p>
-                              <p><span class="numbers">2. </span>Fill your details and submit.</p>
-                              <img src="{{ '/assets/images/doc-img45.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p>1. To get access to the eManager Console, goto <a  target="_blank" href="https://emcaws.techforce.ai/try/signup?subscriptionId=0">https://emcaws.techforce.ai/try/signup?subscriptionId=0 </a> and submit the details.</p>
+                              <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Details </strong></p>
-                              <p><span class="numbers">3.</span> Upon successful registration, you will be redirected to the login page.</p>
+                              <p><span class="numbers">2.</span> Upon successful registration, you will be redirected to the login page.</p>
 
                               <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Login Page </strong></p>
-                              <p><span class="numbers">4.</span> You will be prompted to verify your email on the first login. Go to your registered email and click on the verification link to complete the email verification process.</p>
+                              <p><span class="numbers">3.</span> You will be prompted to verify your email on the first login. Go to your registered email and click on the verification link to complete the email verification process.</p>
                               <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Verification Process </strong></p>
-                              <p><span class="numbers">5.</span> Once you're done with the verification process you will be redirected to the eManager -Console homepage page.</p>
+                              <p><span class="numbers">4.</span> Once you're done with the verification process you will be redirected to the eManager -Console homepage page.</p>
 
 
                            </div>
