--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -869,7 +869,7 @@
                             <h5>Use Cases:</h5>
                             <h5>Build a basic flow:</h5>
                             <p>Build a basic flow to open the Amazon website, search for a product by entering some text into the search box, read the text from the searched product, store it into a variable and print the text to the logs panel.</p>
-                            <h5><a class="Build" href="assets/files/DA.docx" download>Build a flow using desktop actions:</a></h5>
+                            <h5><a class="Build" href="assets/files/Desktop-Automation-Files.zip" download>Build a flow using desktop actions:</a> (Click here to down load the flow and its requirements)</h5>
                             <p>Build a flow to show desktop, open notepad, enter some text, save the notepad, close the notepad, and switch back to the studio.</p>
                             <h5><a class="Build" href="assets/files/WA.docx" download>Build a flow using Web actions:</a></h5>
                             <p>Build a flow to open a webpage, click on an element, scroll the page down, take the snapshot of a page, print the text of an HTML element in the logs, capture the column data from a web table into a variable and print it in logs, and go back to the previous page.</p>
