--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -891,7 +891,7 @@
                                   <p><span class="numbers">4.</span>	Implicit wait feature that waits for webpage elements to load before act on</p>
                             </div>
                             <div id="What"  class="page-section">
-                                    <h4 class="purple"><span class="numbers"></span> What’s New</h4>
+                                  <h4 class="purple"><span class="numbers"></span> What’s New</h4>
                                   <p><span class="numbers">1.</span> Firefox and Microsoft Edge support Web Automation.</p>
                                   <p><span class="numbers">2.</span> Lightweight installation distribution</p>
                                   <p><span class="numbers">3.</span> Debug mode</p>
@@ -904,7 +904,7 @@
                             </div>
 
                             <div id="TechforceRPA"  class="page-section">
-                              <h3>Techforce.ai RPA</h3>
+                              <h3 style="text-transform:none;">Techforce.ai RPA</h3>
                               <p>Techforce.ai Robotic Process Automation (Techforce.ai RPA) is a software component or tool which automates mundane repetitive business processes. It helps business users to streamline enterprise operations and reduce costs. Also, Techforce.ai RPA enables developers to focus on the most important, value-added tasks by automating repetitive clerical tasks.</p>
                               <h5>Benefits of Techforce.ai RPA:</h5>
                               <li>Low cost and easy to implement</li>
