--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -553,7 +553,7 @@
                         </div> -->
                         <ul class="nav nav-pills flex-column side customScroll">
                                   <li class="subMenu">
-                                      <a href="#AboutTechForce" class="heading"><span class="numbers"></span>About TechForce.ai</a>
+                                      <a href="#AboutTechForce" class="heading"><span class="numbers"></span>About TechForce.Ai</a>
                                   </li>
                                   <li class="subMenu">
                                       <a href="#GetStarted" class="heading"><span class="numbers"></span>Get Started</a>
@@ -565,11 +565,11 @@
                                           <li><a class="child 1" href="#What"> What's New</a></li>
                                       </ul>
                                       <li class="subMenu">
-                                          <a href="#TechforceRPA" class="heading"><span class="numbers"></span>Techforce.ai RPA</a>
+                                          <a href="#TechforceRPA" class="heading"><span class="numbers"></span>Techforce.Ai RPA</a>
                                       </li>
                                   </li>
                                  <li class="subMenu">
-                                      <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.ai Studio Guide</a>
+                                      <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.Ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
                                           <li id="Installation" ><a id="installation-expand" class="child 2" href="#Installation">Installation</a>
                                               <ul id="installation-ul">
