--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -818,7 +818,7 @@
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="AboutTechForce"  class="page-section">
                                 <h3>About TechForce.ai </h2>
-                                <p>TechForce.ai(TFAI) is the industry’s first eWorkforce company that helps companies deploy their own human-like digital employees to perform work, by leveraging intelligent automation technologies.</p>
+                                <p>TechForce.ai(TFAI) is the industry’s first E-Workforce company that helps companies deploy their own human-like digital employees to perform work, by leveraging intelligent automation technologies.</p>
                                 <img src="{{ '/assets/images/doc-img109.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0px; margin-top:10px;margin-bottom:10px;">
                                 <p>Intelligent Automation Software includes five major technologies:</p>
                                 <li><strong>Robotic Process Automation </strong>for performing repetitive tasks.</li>
@@ -827,11 +827,11 @@
                                 <li><strong>Computer Vision-</strong>based OCR technology for extracting data from unstructured documents like scanned images, PDF documents, etc.</li>
                                 <li><strong>Intelligent process management </strong>for collaborating with and learning from human colleagues with a human-in-the-loop approach</li>
                                 <img src="{{ '/assets/images/doc-img110.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                                <p>TechForce.ai is a comprehensive, low code technology for developers to rapidly deploy eWorkers across business processes with basic programming understanding.</p>
-                                <p>TFAI's software offers integrated automation capabilities through its eWorkforce.</p>
-                                <li>Compared to legacy automation approach, which starts with robotic process automation bots, TFAI's eWorkforce offers integrated, human-like cognitive capabilities in a single, low-code platform to build, deploy and manage automated business processes</li>
-                                <li>TFAI's eWorkers engage, see, act and learn from colleagues through proprietary deep reinforcement learning AI technology</li>
-                                <li>Through integrated end-to-end automation eWorkforce software of TFAI gives a significantly low cost of ownership for organizations to deploy and manage intelligent automation compared to task-based siloed automation offered by robotic process automation and 3rd party AI services integration</li>
+                                <p>TechForce.ai is a comprehensive, low code technology for developers to rapidly deploy E-Workers across business processes with basic programming understanding.</p>
+                                <p>TFAI's software offers integrated automation capabilities through its E-Workforce.</p>
+                                <li>Compared to legacy automation approach, which starts with robotic process automation bots, TFAI's E-Workforce offers integrated, human-like cognitive capabilities in a single, low-code platform to build, deploy and manage automated business processes</li>
+                                <li>TFAI's E-Workers engage, see, act and learn from colleagues through proprietary deep reinforcement learning AI technology</li>
+                                <li>Through integrated end-to-end automation E-Workforce software of TFAI gives a significantly low cost of ownership for organizations to deploy and manage intelligent automation compared to task-based siloed automation offered by robotic process automation and 3rd party AI services integration</li>
                                 <img src="{{ '/assets/images/doc-img111.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                 <p>TFAI is the industry’s first intelligent automation-as-a-service platform with cloud-native architecture. It supports the dynamic scaling of eWorkers across all layers of its intelligent automation stack.</p>
                                 <p>It offers flexible and hybrid deployment options for enterprises, which include public cloud, on-premises, and Hybrid models, supported by pay-per-use and subscription-based pricing.</p>
@@ -840,7 +840,7 @@
                                 <p>TFAI platform makes it easy to build, deploy and manage eWorkers through self-service management capabilities.</p>
                                 <p>The following detailed documentation explains various components of TFAI's intelligent automation software and how to build, deploy, and manage eWorkforce.</p>
 
-                                <h5>TechForce.ai RPA Studio</h5>
+                                <h5>TechForce.Ai RPA Studio</h5>
                                 <p>TechForce.ai RPA Studio is a complete solution for application integration, and automation of third-party applications, administrative IT tasks, and business IT processes.</p>
                                 <p>TechForce.ai RPA Studio contains multiple panels for easier access to specific functionalities. The UI of TFAI RPA Studio contains user-friendly functionalities, that can help automate any business process to augment the manual workforce and rapidly build AI-powered digital employees across the Business & IT workflows. The User Interface and features explained below:</p>
                                 <img src="{{ '/assets/images/doc-img108.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
