--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -780,7 +780,7 @@
                                       </ul>
                                   </li>
                                   <li>
-                                      <a href="#Worker" class="heading"><span class="numbers"></span>E-WORKER Machine</a>
+                                      <a href="#Worker" class="heading"><span class="numbers"></span>E-Worker Machine</a>
                                       <ul class="collapse list-unstyled collapse-4">
                                           <li><a class="child  4" href="#RunTimeInstallation">RunTime Installation Steps</a>
                                                <ul>
@@ -2552,7 +2552,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3 style="text-transform:none"><span class="numbers">5.</span> E-WORKER Machine</h3>
+                            <h3 style="text-transform:none"><span class="numbers">5.</span> E-Worker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
