--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -780,7 +780,7 @@
                                       </ul>
                                   </li>
                                   <li>
-                                      <a href="#Worker" class="heading"><span class="numbers"></span>E-Worker Machine</a>
+                                      <a href="#Worker" class="heading"><span style="text-decoration:none">E-Worker Machine</span></a>
                                       <ul class="collapse list-unstyled collapse-4">
                                           <li><a class="child  4" href="#RunTimeInstallation">RunTime Installation Steps</a>
                                                <ul>
