--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -791,7 +791,7 @@
                                                     <li><a class="child  4" href="#Uninstall">Uninstall Instructions</a></li>
                                                </ul>
                                           </li>
-                                          <li><a class="child  4" href="#Registeringworker">Registering E-Worker Machine with e-manager Console</a></li>
+                                          <li><a class="child  4" href="#Registeringworker">Registering E-Worker Machine with E-Manager Console</a></li>
                                           <li><a class="child  4" href="#TriggeringBots">Triggering Action Flows</a></li>
 
                                       </ul>
