--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -918,7 +918,7 @@
                               <p>You can simply play the Action Flow from the studio to check how it executes.</p>
 
                               <h5>Techforce.ai e-manager Console:</h5>
-                              <p>Techforce.ai e-manager console is a centralized administration console that enables you to publish, execute, schedule, monitor, and manage action flows for your organization. It is a central application that can manage and execute action flows on on-premise and cloud <strong>e-worker Machines</strong>. An e-worker Machine is a physical or virtual machine that consists of Techforce.ai RPA runtime to execute Action Flows. You can register an e-worker Machine with e-manager Console by using the Techforce.ai icon under the system tray menu.</p>
+                              <p>Techforce.ai e-manager console is a centralized administration console that enables you to publish, execute, schedule, monitor, and manage action flows for your organization. It is a central application that can manage and execute action flows on on-premise and cloud <strong>e-worker machines</strong>. An e-worker machine is a physical or virtual machine that consists of Techforce.ai RPA runtime to execute Action Flows. You can register an e-worker machine with e-manager Console by using the Techforce.ai icon under the system tray menu.</p>
                               <p>Techforce.ai e-manager Console is responsible for queuing the requests, executing the action flows as per the sequence, logging audit trial, sending notifications, and real-time reporting. It also supports version control of the Action Flows, user & role management, profile management, billing management, and personal data management.</p>
 
                               <h5>Techforce.ai Runtime:</h5>
@@ -2375,7 +2375,7 @@
                                <p style="text-align:center;"><strong>Figure: Action Flow Tab </strong></p>
                                <p>4. The e-worker machine tab lists the machines registered with the e-manager console. It contains the required runtime to execute the action flows that are published to the e-manager console.</p>
                                <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: e-workers Machine Tab </strong></p>
+                               <p style="text-align:center;"><strong>Figure: E-Workers Machine Tab </strong></p>
                                <p>5. The Queues tab shows the current and pending tasks waiting for the execution in the e-workers machine.</p>
                                <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
@@ -2398,41 +2398,41 @@
                              <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure:  Action Flow Execution </strong></p>
                              <p>3. Select the Execution target Type (like Reserved). If the RESERVED option is selected as the execution type, then specify the e-worker machine.</p>
-                             <p>4. Select the e-worker Machine from the available list of added machines to execute the action flow.</p>
+                             <p>4. Select the e-worker machine from the available list of added machines to execute the action flow.</p>
                              <p>5. Select the mode of execution as Chrome, Mozilla Firefox, Microsoft Edge, or Headless in the execution type list and click on the submit button.</p>
                           </div>
 
                           <div id="WorkerManagement"  class="page-section">
                             <h4 class="skyBlue"> Worker Management</h4>
                             <h5>Worker Management:</h5>
-                            <p>1. The main functionality of an e-worker Machine is to execute the flows that are uploaded on the Action Flows page. So, after adding the e-worker machine, while executing the flows, select the e-worker machine that was created.</p>
+                            <p>1. The main functionality of an e-worker machine is to execute the flows that are uploaded on the Action Flows page. So, after adding the e-worker machine, while executing the flows, select the e-worker machine that was created.</p>
                             <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: e-worker Machine Screen</strong></p>
+                            <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen</strong></p>
                             <p>After creating an e-worker machine, the details of the e-worker machine - like name, host, and so on - can be seen.</p>
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: e-worker Machine Details </strong></p>
+                            <p style="text-align:center;"><strong>Figure: E-Worker Machine Details </strong></p>
                             <h5>E-Worker Machine Categories:</h5>
                             <p>1. The worker category is the type of e-worker machine that is going to be registered. Currently, only the “Reserved” type can be created.</p>
                             <h5>Reserved:</h5>
                             <p>1. If an e-worker machine is created as “Reserved” then the flows can be executed only on that machine.</p>
                             <h5>Creating an e-worker machine:</h5>
-                            <p>1. This is the e-worker Machine screen before the action flows execution environment is created.</p>
+                            <p>1. This is the e-worker machine screen before the action flows execution environment is created.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: e-worker  Machine Screen </strong></p>
-                            <p><span class="numbers">2.</span>  To create an e-worker Machine, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
+                             <p style="text-align:center;"><strong>Figure: E-Worker Machine Screen </strong></p>
+                            <p><span class="numbers">2.</span>  To create an e-worker machine, open the TechForce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon. Click on settings and register. The following screen displays.</p>
                             <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: Register Your e-worker Machine </strong></p>
-                            <p><span class="numbers">3.</span> Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the e-worker Machine. After creating the e-worker Machine, the details of the e-worker machine like name, host, and so on can be seen.</p>
+                            <p style="text-align:center;"><strong>Figure: Register Your E-Worker Machine </strong></p>
+                            <p><span class="numbers">3.</span> Enter the details and click on SUBMIT. A message confirming successful submission will appear. This creates the e-worker machine. After creating the e-worker machine, the details of the e-worker machine like name, host, and so on can be seen.</p>
                             <p><span class="numbers">4.</span> The following image shows the screen of the e-worker  created, also the details of the created e-worker machine can be seen.</p>
                             <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: e-worker Machine Details </strong></p>
-                             <h5>Delete e-worker Machine</h5>
+                            <p style="text-align:center;"><strong>Figure: e-worker machine Details </strong></p>
+                             <h5>Delete E-Worker Machine</h5>
                             <p><span class="numbers">1.</span> To delete an e-worker machine created, just click on the DELETE icon which is available in the details of the machine.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Delete Registered e-worker Machine Screen</strong></p>
-                            <p><span class="numbers">2.</span> On the next screen, click on YES to confirm the deletion of the registered e-worker Machine.</p>
+                             <p style="text-align:center;"><strong>Figure: Delete Registered e-worker machine Screen</strong></p>
+                            <p><span class="numbers">2.</span> On the next screen, click on YES to confirm the deletion of the registered e-worker machine.</p>
                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Registered e-worker Machine Deletion Confirmation Screen </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Registered e-worker machine Deletion Confirmation Screen </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
@@ -2442,7 +2442,7 @@
                             <p style="text-align:center;"><strong>Figure: Queues Screen </strong></p>
                             <p>Select the e-worker machine  to check the action flows to be executed in the selected environment.</p>
                             <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                            <p style="text-align:center;"><strong>Figure: Select e-worker Machine</strong></p>
+                            <p style="text-align:center;"><strong>Figure: Select e-worker machine</strong></p>
                             <p>After selecting the e-worker machine, you can see the action flows to be executed. </p>
                             <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                             <p style="text-align:center;"><strong>Figure: Action Flows Status</strong></p>
@@ -2486,8 +2486,8 @@
                           <p> Choose the “Action Flow" that you want to Schedule.</p>
                           <h5><span class="numbers">3.</span> Reserved</h5>
                           <p>Select the e-worker machine in which the execution should be done.</p>
-                          <h5><span class="numbers">4.</span> e-workers Machine</h5>
-                          <p>Select the e-worker Machine in which the execution should be done.</p>
+                          <h5><span class="numbers">4.</span> E-Workers Machine</h5>
+                          <p>Select the e-worker machine in which the execution should be done.</p>
                           <h5><span class="numbers">5.</span> Browser option</h5>
                           <p>Select the Browser option to execute in Chrome, Mozilla Firefox, Microsoft Edge, or headless mode.</p>
                           <h5><span class="numbers">6.</span> Timezone</h5>
@@ -2552,7 +2552,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3 style="text-transform:none"><span class="numbers">5.</span> e-worker Machine</h3>
+                            <h3 style="text-transform:none"><span class="numbers">5.</span> E-Worker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
@@ -2623,12 +2623,12 @@
                              <p><span class="numbers">2.</span> The	Action Flows page lists the action flows that are published to the e-manager console.</p>
                              <p><span class="numbers">3.</span>	To publish an action flow to the e-manager console, first zip the action flow folder. Click on the UPLOAD button on the top right corner of the page, browse the zip file, and click the UPLOAD button. The action flow will be uploaded.</p>
                              <p><span class="numbers">4.</span> After uploading, execute the flow by clicking on the PLAY button.</p>
-                             <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the e-worker Machine in which the flow should get executed, select the execution type, and click on the submit button.</p>
+                             <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the e-worker machine in which the flow should get executed, select the execution type, and click on the submit button.</p>
                              <p><span class="numbers">6.</span>	e-manager console automatically maintains versioning for the published action flows. Click on the number below versions to see the default version of the action flow. The default version of a published action flow is 1.0. If you publish the action flow again with some changes, the latest one is marked as the default one. You can switch back the older version of action flow at any point in time by simply selecting the required version.</p>
                              <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the Action Flows. You can also see the live logs of an instance while the execution is in progress.</p>
                              <p><span class="numbers">8.</span>	Schedules functionality is, to schedule/execute action flows repetitively on a timely basis.</p>
                              <p><span class="numbers">9.</span> To create a Schedule, navigate to the SCHEDULES page, and click on the CREATE button. </p>
-                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the Browser Option, e-worker Machine, and Time Zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly, or Advanced. Also, specify when to stop the Schedule.</p>
+                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the Browser Option, e-worker machine, and Time Zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly, or Advanced. Also, specify when to stop the Schedule.</p>
                              <p><span class="numbers">11.</span> If selected Minutes, then the Action Flow executes at specified intervals in minutes.</p>
                              <p><span class="numbers">12.</span> If the Hourly option is selected, then the flow executes at specified intervals of hours and minutes.</p>
                              <p><span class="numbers">13.</span> If the Daily option is selected, then the flow executes every day at the specified time considering hours and minutes.</p>
@@ -2761,11 +2761,11 @@
                             <h5>Benefits of TechForce.ai Studio Upgraded version </h5>
                             <p>1.	Maintaining the logs of Action Flows.</p>
                             <p>2.	Scheduling the flows.</p>
-                            <p>3.	e-worker Machines to select the run environment to execute the flows.</p>
+                            <p>3.	e-worker machines to select the run environment to execute the flows.</p>
                             <p>4.	Queues</p>
                             <p>5. Secret Vault</p>
                             <p>6.	Restricted user hierarchy</p>
-                            <p>7.	Action Flows can be executed either in Attended or Unattended mode on the selected e-worker Machine environment.</p>
+                            <p>7.	Action Flows can be executed either in Attended or Unattended mode on the selected e-worker machine environment.</p>
                           </div>
 
 
