--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -863,7 +863,7 @@
                           <div id="GetStarted"  class="page-section">
                             <h3>Getting Started</h3>
                             <h5>This section aims at getting started with building of simple Action-flows:</h5>
-                            <p>To Create and edit flows in the TechForce.ai studio, use the following examples. This would help familiarization with the features and enhance understanding.</p>
+                            <p>To create and edit flows in the TechForce.ai studio, use the following examples. This would help familiarization with the features and enhance understanding.</p>
                             <h5>Use Cases:</h5>
                             <h5>Build a basic flow:</h5>
                             <p>Build a basic flow with the following actions:</p>
